--- a/package.json
+++ b/package.json
@@ -12,11 +12,33 @@
     "@types/node": "18.15.3",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
+    "autoprefixer": "^10.4.14",
+    "clsx": "^1.2.1",
+    "contentlayer": "^0.3.0",
+    "date-fns": "^2.29.3",
     "eslint": "8.36.0",
     "eslint-config-next": "13.2.4",
+    "jotai": "^2.0.3",
+    "lucide-react": "^0.125.0",
     "next": "13.2.4",
+    "next-contentlayer": "^0.3.0",
+    "next-superjson-plugin": "^0.5.6",
+    "postcss": "^8.4.21",
+    "prettier": "^2.8.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "typescript": "4.9.5"
+    "rehype-autolink-headings": "^6.1.1",
+    "rehype-highlight": "^6.0.0",
+    "rehype-pretty-code": "^0.9.4",
+    "rehype-slug": "^5.1.0",
+    "remark-gfm": "^3.0.1",
+    "shiki": "^0.14.1",
+    "superjson": "^1.12.2",
+    "swr": "^2.1.0",
+    "tailwind-radix-colors": "^0.0.11",
+    "tailwind-variants": "^0.1.1",
+    "tailwindcss": "^3.2.7",
+    "tailwindcss-animate": "^1.0.5",
+    "typescript": "5.0.2"
   }
 }
