--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,9 +17,7 @@
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "isolatedModules": true,
-    "types": [
-      "vitest/globals"
-    ],
+    "types": [],
     "jsx": "preserve",
     "baseUrl": ".",
     "paths": {
